# django-oidc-provider-example

./: .gitignore
backend/: docker-compose.yml  pyproject.toml  test.py
backend/.devcontainer/: devcontainer.json
backend/config/: settings.py  urls.py
react-frontend/: package-lock.json  package.json
react-frontend/src/: main.tsx  oidc-config.ts
react-frontend/src/authViews/: Callback.tsx  Login.tsx  Logout.tsx  isAuthenticated.ts
react-frontend/src/routes/: private.tsx  root.tsx
